<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="appservice.aransegui.br.prpjetofirebase.Activity.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtCadEmail"
            android:hint="E_MAIL"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtCadNome"
                android:hint="@string/nome"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtCadSobrenome"
                android:hint="@string/sobrenome"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtAniversario"
                android:hint="@string/aniversario"
                android:inputType="date"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtCadSenha"
                android:hint="Senha"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtCadConfirmaSenha"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

            <RadioGroup

                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:checked="true"
                android:text="@string/feminino"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:id="@+id/rgSexo"
                android:layout_height="wrap_content">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rbFeminino"
                    android:checked="true"
                    android:text="@string/cliente"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rbMasculino"
                    android:checked="true"
                    android:text="@string/profissional"
                    android:layout_height="wrap_content" />


            </RadioGroup>

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:id="@+id/btnGravar"
                android:text="@string/gravar"
                android:layout_height="wrap_content" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>
