<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="appservice.aransegui.br.prpjetofirebase.Activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
         android:id="@+id/txtTitulo"
        android:text="@string/p_gina_inicial"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/service"
        android:layout_marginTop="20dp"
        
        android:contentDescription="@string/todo" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btnFazerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/fazer_login" />





</LinearLayout>
